# pico-multi-core-debug-flash-tester

./: CMakeLists.txt  README.md  pico_dual_core_demo.c
